@@ -148,9 +148,12 @@ static List _build_license_list(char *licenses, bool *valid)
 			if ((token[i] == ':') || (token[i] == '*')) {
 				token[i++] = '\0';
 				num = (int32_t)strtol(&token[i], &end_num, 10);
+				if (*end_num != '\0')
+					 *valid = false;
+				break;
 			}
 		}
-		if (num < 0) {
+		if (num < 0 || !(*valid)) {
 			*valid = false;
 			break;
 		}
